
	* src/libtracker-common/tracker-nfs-lock.[ch]: Cleaned up code to
	be consistent.
	
	* src/trackerd/tracker-db-sqlite.c: Fixed warning.
	
	* src/trackerd/tracker-dbus-search.c: Always call
	tracker_dbus_query_result_to_ptr_array() since it creates the
	return value even if the result set is empty.

2008-05-08  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-dbus-search.c: Bugfix when the amount of search
	results was 0

2008-05-08  Ivan Frade  <ivan.frade@nokia.com>
	
	* src/libtracker-common/Makefile.am
	* src/libtracker-common/tracker-nfs-lock.c
	* src/libtracker-common/tracker-nfs-lock.h
	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-main.c:
	Moved NFS lock code to his own module in libtracker-common.
	
2008-05-08  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-cache.c:
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-db.[ch]: 
	* src/trackerd/tracker-dbus-daemon.c:
	* src/trackerd/tracker-main.[ch]: 
	* src/trackerd/tracker-process-files.c: Cleaned up the Tracker
	structure by removing members which are not used. Also removed the
	structures in the tracker-main.h file which are not used.

2008-05-08  Philip Van Hoof  <pvanhoof@gnome.org>
	
	* src/trackerd/tracker-db-sqlite.c:
	* src/libtracker-db/tracker-db-interface.h:
	* src/libtracker-db/tracker-db-interface-sqlite.c:
	* src/libtracker-db/tracker-db-interface.c: Improvement for void returning
	queries

2008-05-08  Philip Van Hoof  <pvanhoof@gnome.org>
	
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-db-sqlite.h:
	* data/sqlite-stored-procs.sql:
	* data/sqlite-cache.sql:
	* data/Makefile.am:
	* data/sqlite-temp-tables.sql: Moved LiveSearches and Events to the 
	cache db

2008-05-08  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-dbus-daemon.h:
	* src/trackerd/tracker-email-evolution.c:
	* src/trackerd/tracker-email-thunderbird.c: